manifests/argocd-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server-websecure
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argo.scottccourt.com`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
  tls:
    secretName: argocd-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server-web
  namespace: argocd
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`argo.scottccourt.com`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
