manifests/authentik-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: forwarded-https
  namespace: authentik
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik-server-websecure
  namespace: authentik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.scottccourt.com`)
      kind: Rule
      services:
        - name: authentik-server
          port: 80
  tls:
    secretName: authentik-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik-server-web
  namespace: authentik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`auth.scottccourt.com`)
      kind: Rule
      services:
        - name: authentik-server
          port: 80
      middlewares:
        - name: forwarded-https
