manifests/hass-ingressroute.yaml
apiVersion: v1
kind: Service
metadata:
  name: hass-external
  namespace: default
spec:
  ports:
    - port: 8123
      targetPort: 8123
---
apiVersion: v1
kind: Endpoints
metadata:
  name: hass-external
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.0.11
    ports:
      - port: 8123
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authentik-forwardauth
  namespace: default
spec:
  forwardAuth:
    address: "http://authentik-server.authentik.svc.cluster.local:80/outpost.goauthentik.io/auth/traefik"
    trustForwardHeader: true
    authResponseHeaders:
      - X-authentik-username
      - X-authentik-groups
      - X-authentik-email
      - X-authentik-name
      - X-authentik-uid
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: forwarded-https
  namespace: default
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hass-websecure
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`hass.scottccourt.com`)
      kind: Rule
      services:
        - name: hass-external
          port: 8123
      middlewares:
        - name: authentik-forwardauth
  tls:
    secretName: hass-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hass-web
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`hass.scottccourt.com`)
      kind: Rule
      services:
        - name: hass-external
          port: 8123
      middlewares:
        - name: authentik-forwardauth
        - name: forwarded-https
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hass-app-websecure
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`hass-app.scottccourt.com`)
      kind: Rule
      services:
        - name: hass-external
          port: 8123
  tls:
    secretName: hass-app-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hass-app-web
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`hass-app.scottccourt.com`)
      kind: Rule
      services:
        - name: hass-external
          port: 8123
      middlewares:
        - name: forwarded-https
