manifests/jellyfin-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: forwarded-https
  namespace: jellyfin
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin-websecure
  namespace: jellyfin
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jellyfin.scottccourt.com`)
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
  tls:
    secretName: jellyfin-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin-web
  namespace: jellyfin
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`jellyfin.scottccourt.com`)
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
      middlewares:
        - name: forwarded-https
