manifests/mealie-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: forwarded-https
  namespace: mealie
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mealie-websecure
  namespace: mealie
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`mealie.scottccourt.com`)
      kind: Rule
      services:
        - name: mealie
          port: 9000
  tls:
    secretName: mealie-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mealie-web
  namespace: mealie
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`mealie.scottccourt.com`)
      kind: Rule
      services:
        - name: mealie
          port: 9000
      middlewares:
        - name: forwarded-https
