manifests/qbittorrent-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: forwarded-https
  namespace: downloads
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authentik-forwardauth
  namespace: downloads
spec:
  forwardAuth:
    address: "http://ak-outpost-authentik-embedded-outpost.authentik.svc.cluster.local:9000/outpost.goauthentik.io/auth/traefik"
    trustForwardHeader: true
    authResponseHeaders:
      - X-authentik-username
      - X-authentik-groups
      - X-authentik-email
      - X-authentik-name
      - X-authentik-uid
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent-websecure
  namespace: downloads
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`qbittorrent.scottccourt.com`)
      kind: Rule
      services:
        - name: qbittorrent
          port: 8080
      middlewares:
        - name: authentik-forwardauth
  tls:
    secretName: qbittorrent-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent-web
  namespace: downloads
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`qbittorrent.scottccourt.com`)
      kind: Rule
      services:
        - name: qbittorrent
          port: 8080
      middlewares:
        - name: authentik-forwardauth
        - name: forwarded-https
