manifests/vikunja-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: forwarded-https
  namespace: vikunja
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vikunja-websecure
  namespace: vikunja
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vikunja.scottccourt.com`)
      kind: Rule
      services:
        - name: vikunja
          port: 3456
  tls:
    secretName: vikunja-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vikunja-web
  namespace: vikunja
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`vikunja.scottccourt.com`)
      kind: Rule
      services:
        - name: vikunja
          port: 3456
      middlewares:
        - name: forwarded-https
